# Interactive-Story-Generator

./: .env_example  README.md  pyproject.toml
Interactive_Story_Generator/: pyproject.toml
src/: config.py  main.py
src/auth/: models.py  router.py
src/database/: connection.py  models.py
src/endpoints/: router.py  router_auth.py
src/stories/: router.py  utils.py  workflow.py
src/stories/nodes/: character_node.py  outline_node.py  prompts.py  scene_node.py
src/stories/nodes_continue/: append_scene_node.py  continuation_router_node.py  develop_character_node.py  extend_plot_node.py  prompts.py
src/stories/prompts/: character_prompt.txt  outline_prompt.txt  scene_prompt.txt
src/stories/prompts_continue/: append_scene_prompt.txt  continuation_router_prompt.txt  develop_character_prompt.txt  extend_plot_prompt.txt
test/: test_api.py  test_auth.py  test_node.py
